--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/view-ink">View inks</a>
+                    <a class="nav-link" href="/ink-table">View inks</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/excel-sheet">Download Excel chart</a>
@@ -34,6 +34,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/help">Help</a>
                 </li>
             </ul>
         </div>
@@ -51,10 +54,11 @@
         </div>
 
         <div style="text-align: center;">
-            <p class="fp-btn"><a class="btn btn-primary" href="/view-ink">View inks</a></p>
+            <p class="fp-btn"><a class="btn btn-primary" href="/ink-table">View inks</a></p>
             <p class="fp-btn"><a class="btn btn-success" href="/excel-sheet">Download Excel chart</a></p>
             <p class="fp-btn"><a class="btn btn-info" href="/requisition-instructions">Requisition instructions</a></p>
             <p class="fp-btn"><a class="btn btn-secondary" href="/about">About</a></p>
+            <p class="fp-btn"><a class="btn btn-link" href="/help">Help</a></p>
         </div>
 
     </div>
